--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <!-- Semantic UI -->
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/combine/npm/semantic-ui-dropdown@2.4.1/dropdown.min.css,npm/semantic-ui-dropdown@2.4.1/dropdown.min.css"
+    />
+
+    <script
+      src="https://cdn.jsdelivr.net/combine/npm/semantic-ui-dropdown@2.4.1/package.min.js,npm/semantic-ui-dropdown@2.4.1/index.min.js,npm/semantic-ui-dropdown@2.4.1/dropdown.min.js,npm/semantic-ui-dropdown@2.4.1/dropdown.min.js"
+      defer
+    ></script> -->
+
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
