adjusted ui for product list for mobile view

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,17 +25,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <!-- Semantic UI -->
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/combine/npm/semantic-ui-dropdown@2.4.1/dropdown.min.css,npm/semantic-ui-dropdown@2.4.1/dropdown.min.css"
-    />
-
-    <script
-      src="https://cdn.jsdelivr.net/combine/npm/semantic-ui-dropdown@2.4.1/package.min.js,npm/semantic-ui-dropdown@2.4.1/index.min.js,npm/semantic-ui-dropdown@2.4.1/dropdown.min.js,npm/semantic-ui-dropdown@2.4.1/dropdown.min.js"
-      defer
-    ></script> -->
-
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -43,7 +32,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>MCG Cosmetics</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
